fix H1 centering on Safari

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,9 @@ header h1 {
     top: 105px;
     left: 50%;
     margin-right: -50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateY(-50%);
     transform: translate(-50%, -50%);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40;
